# eigpca

./: LICENSE  README.md  pyproject.toml
eigpca/: __init__.py
examples/: Example.ipynb
